H3CIPMSJAVA-20180830/src/objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>用户姓名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>邮箱</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Number__c</fullName>
        <label>产品序号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phonenumber__c</fullName>
        <label>电话</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>